k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: m2
spec:
  replicas: 1
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      # 👇 Add this block
      containers:
        - name: api
          image: am-api:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: m2
spec:
  selector: { app: api }
  ports: [{ port: 8000, targetPort: 8000 }]
